# SimpleSock

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  SimpleSock - Example1.cbp  SimpleSock - Example1.depend  SimpleSock - Example1.layout  SimpleSock - Example1.vcxproj  SimpleSock - Example2.cbp  SimpleSock - Example2.depend  SimpleSock - Example2.layout  SimpleSock - Example2.vcxproj  SimpleSock - Example3.cbp  SimpleSock - Unittests.vcxproj  SimpleSock.cbp  SimpleSock.depend  SimpleSock.layout  SimpleSock.mk  SimpleSock.sln  SimpleSock.workspace  SimpleSock.workspace.layout  appveyor.yml
dependency/UnitTest/: UnitTest.h  termcolor.h
doxygen/: doxyfile
examples/: CMakeLists.txt  example1.cpp  example2.cpp
src/: SimpleSock.cpp  SimpleSock.h  SimpleSockTCP.cpp  SimpleSockTCP.h  SimpleSockUDP.cpp  SimpleSockUDP.h  SimpleSockUDP_Mock.h
test/: CMakeLists.txt  TestTCPSock.cpp  TestTCPSock.h  TestUDPSock.cpp  TestUDPSock.h  main.cpp
